src/objects/SMS_Responses__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Pre-Build responses for SMS Messaging</description>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Category of Message Response</inlineHelpText>
        <label>Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <inlineHelpText>Commentary about how/when to use the Message</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <inlineHelpText>Message Text</inlineHelpText>
        <label>Message</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <label>SMS Responses</label>
</CustomObject>